<resources>
    <string name="app_name">FashionCharm</string>
    <string name="sign_up">Sign up</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="discover_your_style">Discover Your Style!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="username2">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="register">Register</string>
</resources>